Fix extra space below header in small screen

--- a/app/assets/stylesheets/people.scss
+++ b/app/assets/stylesheets/people.scss
@@ -42,13 +42,6 @@ h4 {
 	box-sizing: border-box;
 	min-height: 100vh;
 	padding-bottom: $footer-height + 20px;
-	@include for-phone-only {
-		padding-top: $compressed-header-height;
-	}
-
-	@include up-to-medium-phone {
-		padding-top: $super-compressed-header-height;
-	}
 }
 
 .secondary-label {
